<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Italian">

    <TextView
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:text=" Categories"
        android:visibility="visible" />
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button5"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/grilled_cheese" />

    <Button
        android:id="@+id/button6"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/homemade_marinara" />

    <Button
        android:id="@+id/button7"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/roasted_mushroom" />

    <Button
        android:id="@+id/button8"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/spaghetti_carbonara" />




</RelativeLayout>