<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chinese">

    <TextView
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="673dp"
        android:text="Chinese Recipes"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:text="@string/chinese"
        android:visibility="visible" />

    <Button
        android:id="@+id/button9"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/szechuan_stir_fry" />

    <Button
        android:id="@+id/button10"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/chow_mein" />

    <Button
        android:id="@+id/button11"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/kung_pao_chicken" />

    <Button
        android:id="@+id/button12"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/hoisin_pork_ribs" />
</RelativeLayout>