<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vegan">

    <TextView
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="683dp"
        android:text=" Vegan Recipes"
        android:visibility="visible" />
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:text=" Vegan Recipes"
        android:visibility="visible" />
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button13"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/roasted_broccoli" />

    <Button
        android:id="@+id/button14"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/sesame_soy_noodles" />

    <Button
        android:id="@+id/button15"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/mashed_cauliflower" />

    <Button
        android:id="@+id/button16"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/roasted_broccoli" />
</RelativeLayout>
